--- a/src/components/FriendActivity/friendActivity.scss
+++ b/src/components/FriendActivity/friendActivity.scss
@@ -4,14 +4,14 @@
 // Spotify's class naming convention for a buddy-feed.
 .buddy-feed {
   grid-area: right-sidebar;
-  background-color: #121212;
+  background-color: var(--background-base);
   border-radius: 8px;
   border-image-outset: 0;
   border-image-repeat: stretch;
   border-image-slice: 100%;
   border-image-source: none;
   border-image-width: 1;
-  border-color: #b3b3b3;
+  border-color: var(--text-gray);
   border-style: none;
   border-width: 0px;
   border-top-width: 0px;
@@ -19,16 +19,31 @@
   border-bottom-width: 0px;
   border-left-width: 0px;
   box-sizing: border-box;
-  color: #b3b3b3;
+  color: var(--text-gray);
   margin: 0px;
   padding: 0px;
   text-transform: none;
   -webkit-box-direction: normal;
   -webkit-font-smoothing: antialiased;
-  width: 270px;
-  min-height: 0;
+  width: var(--right-sidebar-width);
+  padding-left: 1.25rem;
 
-  // Insure the buddy feed's height stays within the bounds of the main grid if it overflows.
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 0.25rem;
+  }
+
+  &:hover {
+    ::-webkit-scrollbar-thumb {
+      background-color: hsla(0, 0%, 100%, .3);
+      border-radius: 0.25rem;
+    }
+  }
+
+  // Ensure the buddy feed's height stays within the bounds of the main grid if it overflows.
   min-height: 0;
 
   // Spotify's left nav bar has z-index: 4 as well.
@@ -36,21 +51,17 @@
 
   .friend-activity-container {
     height: 100%;
-
-    padding: 1rem 0 1rem 1rem;
+    padding: 0rem;
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-
-      margin: 0 1rem 2rem 0;
+      margin: 1rem 1rem 1rem 0rem;
 
       h1 {
         font-size: 1rem;
-
         color: var(--text-base, #fff);
-
         user-select: none;
       }
 
@@ -58,7 +69,6 @@
       .refresh {
         display: flex;
         opacity: 0.8;
-
         padding: 0.125rem;
         cursor: pointer;
 
@@ -71,10 +81,8 @@
     }
 
     .friends-list {
-      // Make friend list scrollable when it overflows.
-      overflow-y: auto;
-
-      height: 90%;
+      height: 100%;
+      overflow: overlay;
 
       // Loading spinner container.
       .loader-container {
@@ -85,11 +93,9 @@
         .loader {
           width: 2.5rem;
           height: 2.5rem;
-
           border: 0.25rem solid var(--essential-subdued, #727272);
           border-radius: 50%;
           border-top: 0.25rem solid var(--essential-positive, #1ed760);
-
           animation: spin 1.5s linear infinite;
         }
 
@@ -118,9 +124,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-
           margin-top: 0.25rem;
-
           user-select: none;
           cursor: pointer;
 
@@ -129,11 +133,8 @@
             & .user-play-icon {
               width: 0.75rem;
               height: 0.75rem;
-
               display: inline;
-
               position: absolute;
-
               box-sizing: border-box;
               border-style: solid;
               border-width: 0.375rem 0 0.375rem 0.75rem;
@@ -158,26 +159,21 @@
         .online-badge-container {
           width: 0;
           height: 0;
-
           position: relative;
 
           .online-badge {
             background-color: var(--online-badge, #2e77d0);
-
             width: 0.5rem;
             height: 0.5rem;
-
             position: absolute;
             left: -0.5rem;
             top: 0.375rem;
-
             border-radius: 50%;
           }
         }
 
         .friend-info {
           width: 100%;
-
           margin: 0 1rem 0 0.625rem;
 
           .username-and-time {
@@ -187,16 +183,12 @@
 
             .username {
               max-width: 145px;
-
               font-size: 0.875rem;
               font-weight: 700;
-
               cursor: pointer;
-
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
-
               color: var(--text-gray, #b3b3b3);
 
               &:hover {
@@ -206,28 +198,23 @@
 
             .time {
               font-size: 0.75rem;
-
               cursor: default;
             }
           }
 
           .track-and-artist {
-            max-width: 178px;
-
+            max-width: calc(var(--sidebar-width) - 6.5rem);
             display: flex;
             align-items: center;
-
             font-size: 0.75rem;
 
             .track-info {
+              max-width: calc((var(--sidebar-width) - 6.5rem)/2);
               display: inline-block;
-
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
-
               color: var(--text-gray, #b3b3b3);
-
               cursor: pointer;
 
               &:hover {
@@ -237,9 +224,7 @@
 
             .bullet-separator {
               color: var(--text-base, #fff);
-
               white-space: pre;
-
               cursor: default;
             }
           }
@@ -247,10 +232,8 @@
           .context-container {
             display: flex;
             align-items: center;
-
             color: var(--text-gray, #b3b3b3);
             font-size: 0.75rem;
-
             cursor: pointer;
 
             &:hover {
@@ -258,12 +241,9 @@
             }
 
             .context-name {
-              max-width: 160px;
-
+              max-width: calc((var(--sidebar-width) - 6.5rem)/2);
               display: inline-block;
-
               margin-left: 0.375rem;
-
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
@@ -271,10 +251,6 @@
           }
         }
       }
-    }
-
-    ::-webkit-scrollbar {
-      width: 12px;
     }
   }
 }
